--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -630,6 +630,178 @@
     "    - Principal component analysis\n",
     "    - Clustering"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removal of informationlesss variables\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column(s) name(s) present in user and business: {'name'}\n",
+      "Column(s) name(s) present in user and reviews: {'useful', 'user_id', 'funny', 'cool'}\n",
+      "Column(s) name(s) present in business and reviews: {'business_id'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assessing columns with the same name\n",
+    "print(f\"Column(s) name(s) present in user and business: {set(df_users.columns).intersection(set(df_business.columns))}\")\n",
+    "print(f\"Column(s) name(s) present in user and reviews: {set(df_users.columns).intersection(set(df_Train_reviews.columns))}\")\n",
+    "print(f\"Column(s) name(s) present in business and reviews: {set(df_business.columns).intersection(set(df_Train_reviews.columns))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_users.rename(columns={'name': 'user_name', 'useful': 'useful_user', 'funny': 'funny_user', 'cool': 'cool_user'}, inplace=True)\n",
+    "df_business.rename(columns={'name': 'business_name'}, inplace=True)\n",
+    "df_Train_reviews.rename(columns={'useful': 'useful_review', 'funny': 'funny_review', 'cool': 'cool_review'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of user ids not in the reviews dataset: 168432\n",
+      "Number of user ids not in the user dataset: 7\n",
+      "Number of business ids not in the reviews dataset: 9803\n",
+      "Number of business ids not in the business dataset: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assessing the number of obersevations that will be lost if we merge the datasets\n",
+    "print(f\"Number of user ids not in the reviews dataset: {len(set(df_users.user_id).difference(set(df_Train_reviews.user_id)))}\")\n",
+    "print(f\"Number of user ids not in the user dataset: {len(set(df_Train_reviews.user_id).difference(set(df_users.user_id)))}\")\n",
+    "print(f\"Number of business ids not in the reviews dataset: {len(set(df_business.business_id).difference(set(df_Train_reviews.business_id)))}\") \n",
+    "print(f\"Number of business ids not in the business dataset: {len(set(df_Train_reviews.business_id).difference(set(df_business.business_id)))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1049993 entries, 0 to 1049992\n",
+      "Data columns (total 34 columns):\n",
+      " #   Column              Non-Null Count    Dtype  \n",
+      "---  ------              --------------    -----  \n",
+      " 0   rating              1049993 non-null  int64  \n",
+      " 1   useful_review       1049993 non-null  int64  \n",
+      " 2   funny_review        1049993 non-null  int64  \n",
+      " 3   cool_review         1049993 non-null  int64  \n",
+      " 4   text                1049993 non-null  object \n",
+      " 5   date                1049993 non-null  object \n",
+      " 6   user_name           1049981 non-null  object \n",
+      " 7   user_since          1049993 non-null  object \n",
+      " 8   useful_user         1049993 non-null  float64\n",
+      " 9   funny_user          1049993 non-null  float64\n",
+      " 10  cool_user           1049993 non-null  float64\n",
+      " 11  premium_account     258797 non-null   object \n",
+      " 12  friends             1049993 non-null  float64\n",
+      " 13  fans                1049993 non-null  float64\n",
+      " 14  compliment_hot      1049993 non-null  float64\n",
+      " 15  compliment_more     1049993 non-null  float64\n",
+      " 16  compliment_profile  1049993 non-null  float64\n",
+      " 17  compliment_cute     1049993 non-null  float64\n",
+      " 18  compliment_list     1049993 non-null  float64\n",
+      " 19  compliment_note     1049993 non-null  float64\n",
+      " 20  compliment_plain    1049993 non-null  float64\n",
+      " 21  compliment_cool     1049993 non-null  float64\n",
+      " 22  compliment_funny    1049993 non-null  float64\n",
+      " 23  compliment_writer   1049993 non-null  float64\n",
+      " 24  business_name       1049993 non-null  object \n",
+      " 25  address             1037280 non-null  object \n",
+      " 26  city                1049993 non-null  object \n",
+      " 27  state               1049993 non-null  object \n",
+      " 28  postal_code         1049836 non-null  object \n",
+      " 29  latitude            1049993 non-null  float64\n",
+      " 30  longitude           1049993 non-null  float64\n",
+      " 31  attributes          1022697 non-null  object \n",
+      " 32  categories          1049902 non-null  object \n",
+      " 33  hours               989967 non-null   object \n",
+      "dtypes: float64(17), int64(4), object(13)\n",
+      "memory usage: 272.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge the datasets\n",
+    "merged_reviews = pd.merge(pd.merge(df_Train_reviews, df_users, on='user_id', how='inner'), df_business, on='business_id', how='inner')\n",
+    "# Remove the columns that are not useful\n",
+    "merged_reviews.drop(columns=['id', 'user_id', 'business_id'], inplace=True)\n",
+    "merged_reviews.info() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss of observations: 7 obersevations that were uncomplete\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Loss of observations: {len(df_Train_reviews) - len(merged_reviews)} obersevations\") #user_ids that were not in the user dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models Comparison & Best Model Assessment"
+   ]
   }
  ],
  "metadata": {
