--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,8 @@
     "# df_business['weekend'] = df_business['hours'].apply(lambda x: extract_weekend_value(x))\n",
     "df_business['hours_list'] = df_business['hours'].apply(lambda x: extract_hours_value(x))\n",
     "df_business['attributes_list'] = df_business['attributes'].apply(lambda x: sorted(extract_attributes_value(x)))\n",
-    "df_business['categories_list'] = df_business['categories'].apply(lambda x: sorted(x.split(',')) if isinstance(x, str) else [])\n"
+    "df_business['categories_list'] = df_business['categories'].apply(lambda x: sorted(map(lambda a: a.strip().lower(),  x.split(',')) ) if isinstance(x, str) else [])\n",
+    "\n"
    ]
   },
   {
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +100,9 @@
        "      <th></th>\n",
        "      <th>business_id</th>\n",
        "      <th>postal_code</th>\n",
-       "      <th>attributes2</th>\n",
-       "      <th>hours2</th>\n",
-       "      <th>categories2</th>\n",
+       "      <th>attributes_list</th>\n",
+       "      <th>hours_list</th>\n",
+       "      <th>categories_list</th>\n",
        "      <th>rating</th>\n",
        "      <th>useful</th>\n",
        "      <th>funny</th>\n",
@@ -116,7 +117,7 @@
        "      <td>19107</td>\n",
        "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Bakeries,  Bubble Tea,  Coffee &amp; Tea,  Food,...</td>\n",
+       "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -129,7 +130,7 @@
        "      <td>19107</td>\n",
        "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Bakeries,  Bubble Tea,  Coffee &amp; Tea,  Food,...</td>\n",
+       "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -142,7 +143,7 @@
        "      <td>19107</td>\n",
        "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Bakeries,  Bubble Tea,  Coffee &amp; Tea,  Food,...</td>\n",
+       "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -155,7 +156,7 @@
        "      <td>19107</td>\n",
        "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Bakeries,  Bubble Tea,  Coffee &amp; Tea,  Food,...</td>\n",
+       "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -168,7 +169,7 @@
        "      <td>19107</td>\n",
        "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Bakeries,  Bubble Tea,  Coffee &amp; Tea,  Food,...</td>\n",
+       "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -194,7 +195,7 @@
        "      <td>19103</td>\n",
        "      <td>[AcceptsInsurance, BikeParking, BusinessAccept...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Active Life,  Doctors,  Fitness &amp; Instructio...</td>\n",
+       "      <td>[active life, doctors, fitness &amp; instruction, ...</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -207,7 +208,7 @@
        "      <td>19147</td>\n",
        "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
        "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
+       "      <td>[mexican, restaurants]</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -220,7 +221,7 @@
        "      <td>19147</td>\n",
        "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
        "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
+       "      <td>[mexican, restaurants]</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -233,7 +234,7 @@
        "      <td>19147</td>\n",
        "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
        "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
+       "      <td>[mexican, restaurants]</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -246,7 +247,7 @@
        "      <td>19147</td>\n",
        "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
        "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
+       "      <td>[mexican, restaurants]</td>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
@@ -272,7 +273,7 @@
        "144872  QscEk0TPjLIlLgQzIN9TnW       19147   \n",
        "144873  QscEk0TPjLIlLgQzIN9TnW       19147   \n",
        "\n",
-       "                                              attributes2  \\\n",
+       "                                          attributes_list  \\\n",
        "0       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
        "1       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
        "2       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
@@ -285,7 +286,7 @@
        "144872  [Alcohol, Ambience, BikeParking, BusinessAccep...   \n",
        "144873  [Alcohol, Ambience, BikeParking, BusinessAccep...   \n",
        "\n",
-       "                                                   hours2  \\\n",
+       "                                               hours_list  \\\n",
        "0       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
        "1       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
        "2       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
@@ -298,18 +299,18 @@
        "144872  [[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...   \n",
        "144873  [[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...   \n",
        "\n",
-       "                                              categories2  rating  useful  \\\n",
-       "0       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       4       1   \n",
-       "1       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       0   \n",
-       "2       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       0   \n",
-       "3       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       4       0   \n",
-       "4       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       1   \n",
+       "                                          categories_list  rating  useful  \\\n",
+       "0       [bakeries, bubble tea, coffee & tea, food, res...       4       1   \n",
+       "1       [bakeries, bubble tea, coffee & tea, food, res...       5       0   \n",
+       "2       [bakeries, bubble tea, coffee & tea, food, res...       5       0   \n",
+       "3       [bakeries, bubble tea, coffee & tea, food, res...       4       0   \n",
+       "4       [bakeries, bubble tea, coffee & tea, food, res...       5       1   \n",
        "...                                                   ...     ...     ...   \n",
-       "144869  [ Active Life,  Doctors,  Fitness & Instructio...       3       0   \n",
-       "144870                            [ Mexican, Restaurants]       5       2   \n",
-       "144871                            [ Mexican, Restaurants]       5       1   \n",
-       "144872                            [ Mexican, Restaurants]       5       1   \n",
-       "144873                            [ Mexican, Restaurants]       5       4   \n",
+       "144869  [active life, doctors, fitness & instruction, ...       3       0   \n",
+       "144870                             [mexican, restaurants]       5       2   \n",
+       "144871                             [mexican, restaurants]       5       1   \n",
+       "144872                             [mexican, restaurants]       5       1   \n",
+       "144873                             [mexican, restaurants]       5       4   \n",
        "\n",
        "        funny  cool                                               text  \n",
        "0           0     2  So I don't know how the other review was doubl...  \n",
@@ -327,7 +328,7 @@
        "[144874 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,11 +343,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_data.to_parquet('data/ATML2024_Task2_BusinnessRatings.parquet')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_categorizes = set(np.concatenate(df_data.categories_list.values).ravel()) #df_data.categories_list.values.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_1_cat = set(np.concatenate(df_data[df_data.rating == 1].categories_list.values).ravel())\n",
+    "rating_2_cat = set(np.concatenate(df_data[df_data.rating == 2].categories_list.values).ravel())\n",
+    "rating_3_cat = set(np.concatenate(df_data[df_data.rating == 3].categories_list.values).ravel())\n",
+    "rating_4_cat = set(np.concatenate(df_data[df_data.rating == 4].categories_list.values).ravel())\n",
+    "rating_5_cat = set(np.concatenate(df_data[df_data.rating == 5].categories_list.values).ravel())"
    ]
   },
   {
