--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
     "# df_Train_reviews = pd.read_parquet('data/ATML2024_reviews_train.parquet')\n",
     "df_Train_reviews = pd.read_csv('data/ATML2024_reviews_train.csv', header=0)\n",
     "\n",
-    "# df_users = pd.read_parquet('data/ATML2024_users.parquet')\n",
-    "df_users = pd.read_csv('data/ATML2024_users.csv', header=0, nrows=100)"
+    "# # df_users = pd.read_parquet('data/ATML2024_users.parquet')\n",
+    "# df_users = pd.read_csv('data/ATML2024_users.csv', header=0, nrows=100)"
    ]
   },
   {
@@ -48,12 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bussiness_city = ['Phila','Philadelphia', 'Philadelphia', 'Philadelphia (Northeast Philly)', 'Philadelphia PA', 'Philadelphila', 'Philadephia', 'Philiadelphia', \n",
+    "                  'Philiidelphia', 'Philly', 'Southwest Philadelphia', 'West Philadelphia', 'philadelphia', 'PHILA', 'PHILADELPHIA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert dictionary columns to the correct types @@@@ Run only once\n",
-    "df_business = df_business[df_business['city'] == 'Philadelphia']\n",
+    "df_business = df_business[df_business['city'].isin(bussiness_city)]\n",
     "df_business['attributes'] = df_business['attributes'].apply(lambda x: ast.literal_eval(x) if not pd.isna(x) or not pd.isnull(x)  else dict())\n",
     "df_business['hours'] = df_business['hours'].apply(lambda x: ast.literal_eval(x) if not pd.isna(x) or not pd.isnull(x)  else dict())\n",
     "\n",
@@ -73,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +109,9 @@
        "      <th></th>\n",
        "      <th>business_id</th>\n",
        "      <th>postal_code</th>\n",
-       "      <th>attributes2</th>\n",
-       "      <th>hours2</th>\n",
-       "      <th>categories2</th>\n",
+       "      <th>attributes_list</th>\n",
+       "      <th>hours_list</th>\n",
+       "      <th>categories_list</th>\n",
        "      <th>rating</th>\n",
        "      <th>useful</th>\n",
        "      <th>funny</th>\n",
@@ -175,159 +185,48 @@
        "      <td>0</td>\n",
        "      <td>This is my favorite bakery in Chinatown! It's ...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144869</th>\n",
-       "      <td>QaNNUNpPIvqk6LH1QjG4JL</td>\n",
-       "      <td>19103</td>\n",
-       "      <td>[AcceptsInsurance, BikeParking, BusinessAccept...</td>\n",
-       "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
-       "      <td>[ Active Life,  Doctors,  Fitness &amp; Instructio...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>I've been to a few studios in the city and I c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144870</th>\n",
-       "      <td>QscEk0TPjLIlLgQzIN9TnW</td>\n",
-       "      <td>19147</td>\n",
-       "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
-       "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>First time trying this restaurant and I had a ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144871</th>\n",
-       "      <td>QscEk0TPjLIlLgQzIN9TnW</td>\n",
-       "      <td>19147</td>\n",
-       "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
-       "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Amazing food and wonderful service! We got the...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144872</th>\n",
-       "      <td>QscEk0TPjLIlLgQzIN9TnW</td>\n",
-       "      <td>19147</td>\n",
-       "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
-       "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>This hidden gem in south philly is why we need...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144873</th>\n",
-       "      <td>QscEk0TPjLIlLgQzIN9TnW</td>\n",
-       "      <td>19147</td>\n",
-       "      <td>[Alcohol, Ambience, BikeParking, BusinessAccep...</td>\n",
-       "      <td>[[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...</td>\n",
-       "      <td>[ Mexican, Restaurants]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Love, love, love Adelita's! Wandered\\nIn after...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>144874 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   business_id postal_code  \\\n",
-       "0       wm9eoqjytVbC7dQcM4WSTM       19107   \n",
-       "1       wm9eoqjytVbC7dQcM4WSTM       19107   \n",
-       "2       wm9eoqjytVbC7dQcM4WSTM       19107   \n",
-       "3       wm9eoqjytVbC7dQcM4WSTM       19107   \n",
-       "4       wm9eoqjytVbC7dQcM4WSTM       19107   \n",
-       "...                        ...         ...   \n",
-       "144869  QaNNUNpPIvqk6LH1QjG4JL       19103   \n",
-       "144870  QscEk0TPjLIlLgQzIN9TnW       19147   \n",
-       "144871  QscEk0TPjLIlLgQzIN9TnW       19147   \n",
-       "144872  QscEk0TPjLIlLgQzIN9TnW       19147   \n",
-       "144873  QscEk0TPjLIlLgQzIN9TnW       19147   \n",
+       "              business_id postal_code  \\\n",
+       "0  wm9eoqjytVbC7dQcM4WSTM       19107   \n",
+       "1  wm9eoqjytVbC7dQcM4WSTM       19107   \n",
+       "2  wm9eoqjytVbC7dQcM4WSTM       19107   \n",
+       "3  wm9eoqjytVbC7dQcM4WSTM       19107   \n",
+       "4  wm9eoqjytVbC7dQcM4WSTM       19107   \n",
        "\n",
-       "                                              attributes2  \\\n",
-       "0       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
-       "1       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
-       "2       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
-       "3       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
-       "4       [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
-       "...                                                   ...   \n",
-       "144869  [AcceptsInsurance, BikeParking, BusinessAccept...   \n",
-       "144870  [Alcohol, Ambience, BikeParking, BusinessAccep...   \n",
-       "144871  [Alcohol, Ambience, BikeParking, BusinessAccep...   \n",
-       "144872  [Alcohol, Ambience, BikeParking, BusinessAccep...   \n",
-       "144873  [Alcohol, Ambience, BikeParking, BusinessAccep...   \n",
+       "                                     attributes_list  \\\n",
+       "0  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "1  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "2  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "3  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "4  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
        "\n",
-       "                                                   hours2  \\\n",
-       "0       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
-       "1       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
-       "2       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
-       "3       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
-       "4       [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
-       "...                                                   ...   \n",
-       "144869  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
-       "144870  [[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...   \n",
-       "144871  [[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...   \n",
-       "144872  [[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...   \n",
-       "144873  [[11.0, 22.0], [11.0, 22.0], [-1, -1], [11.0, ...   \n",
+       "                                          hours_list  \\\n",
+       "0  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
+       "1  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
+       "2  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
+       "3  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
+       "4  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
        "\n",
-       "                                              categories2  rating  useful  \\\n",
-       "0       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       4       1   \n",
-       "1       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       0   \n",
-       "2       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       0   \n",
-       "3       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       4       0   \n",
-       "4       [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       1   \n",
-       "...                                                   ...     ...     ...   \n",
-       "144869  [ Active Life,  Doctors,  Fitness & Instructio...       3       0   \n",
-       "144870                            [ Mexican, Restaurants]       5       2   \n",
-       "144871                            [ Mexican, Restaurants]       5       1   \n",
-       "144872                            [ Mexican, Restaurants]       5       1   \n",
-       "144873                            [ Mexican, Restaurants]       5       4   \n",
+       "                                     categories_list  rating  useful  funny  \\\n",
+       "0  [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       4       1      0   \n",
+       "1  [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       0      0   \n",
+       "2  [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       0      0   \n",
+       "3  [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       4       0      0   \n",
+       "4  [ Bakeries,  Bubble Tea,  Coffee & Tea,  Food,...       5       1      0   \n",
        "\n",
-       "        funny  cool                                               text  \n",
-       "0           0     2  So I don't know how the other review was doubl...  \n",
-       "1           0     0  I love this place..  I love their chunky fried...  \n",
-       "2           0     1  I ordered so many cake from here for our famil...  \n",
-       "3           0     0  Ordered a birthday cake here for the first tim...  \n",
-       "4           0     0  This is my favorite bakery in Chinatown! It's ...  \n",
-       "...       ...   ...                                                ...  \n",
-       "144869      0     0  I've been to a few studios in the city and I c...  \n",
-       "144870      1     1  First time trying this restaurant and I had a ...  \n",
-       "144871      0     0  Amazing food and wonderful service! We got the...  \n",
-       "144872      0     0  This hidden gem in south philly is why we need...  \n",
-       "144873      2     1  Love, love, love Adelita's! Wandered\\nIn after...  \n",
-       "\n",
-       "[144874 rows x 10 columns]"
+       "   cool                                               text  \n",
+       "0     2  So I don't know how the other review was doubl...  \n",
+       "1     0  I love this place..  I love their chunky fried...  \n",
+       "2     1  I ordered so many cake from here for our famil...  \n",
+       "3     0  Ordered a birthday cake here for the first tim...  \n",
+       "4     0  This is my favorite bakery in Chinatown! It's ...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,16 +236,50 @@
     "df_ratings_data = df_Train_reviews[['business_id', 'rating', 'useful', 'funny', 'cool', 'text']]\n",
     "\n",
     "df_data = pd.merge(df_business_data, df_ratings_data, left_on= 'business_id', right_on='business_id')\n",
-    "df_data"
+    "df_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(145048, 10)\n"
+     ]
+    }
+   ],
    "source": [
-    "df_data.to_parquet('data/ATML2024_Task2_BusinnessRatings.parquet')"
+    "# df_data.to_parquet('data/ATML2024_Task2_PhiliBussRatings.parquet')\n",
+    "# print(df_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explanatory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(145048, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_data = pd.read_parquet('data/ATML2024_Task2_PhiliBussRatings.parquet', engine='pyarrow')\n",
+    "print(df_data.shape)"
    ]
   },
   {
@@ -373,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
