--- a/task2_clean.ipynb
+++ b/task2_clean.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Alexis\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "c:\\Users\\Alexis\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "c:\\Users\\Alexis\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import ast as ast\n",
@@ -25,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +69,24 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\Alexis\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\huggingface_hub\\file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBartForSequenceClassification: ['model.decoder.version', 'model.encoder.version']\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Alexis\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Alexis\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBartForSequenceClassification: ['model.encoder.version', 'model.decoder.version']\n",
       "- This IS expected if you are initializing TFBartForSequenceClassification from a PyTorch model trained on another task or with another architecture (e.g. initializing a TFBertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing TFBartForSequenceClassification from a PyTorch model that you expect to be exactly identical (e.g. initializing a TFBertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "All the weights of TFBartForSequenceClassification were initialized from the PyTorch model.\n",
@@ -84,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +391,7 @@
        "[102898 rows x 10 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,9 +418,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Alexis\\AppData\\Local\\Temp\\ipykernel_9824\\1103246713.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_data['sentiment'] = df_data['text'].apply(sentiment)\n"
+     ]
+    }
+   ],
    "source": [
     "# USED On reduced data. Need to clean reviews because of max length in tokens allowed with models... \n",
     "df_data = df_data[:30]\n",
@@ -414,7 +456,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Assign to each \"attribute\" a group \n",
+    "# 2.1 \n",
+    "## An insight on what restaurant consumers generally seem to like (for example in terms of food, service, location, etc...)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Goal: Assigning to each \"attribute\" a group \n",
     "The goal is, once filtered for positive reviews, we compute a mean rating per type of food\n",
     "1. filter for positive reviews.\n",
     "2. assign group to attributes\n",
@@ -426,29 +476,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# See TO DO....\n",
-    "## Analyzing Categories\n",
-    "To do: \n",
-    "1. Replace with full data\n"
+    "# See TO DO.... > Analyzing Categories > Replace with full data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'japanese': 'Type of Cuisine', 'bakeries': 'Meal Type', 'sandwiches': 'Meal Type', 'wine': 'Alcohol'}\n"
+      "{'wine': 'Alcohol', 'sandwiches': 'Meal Type', 'bakeries': 'Meal Type', 'japanese': 'Type of Cuisine'}\n"
      ]
     }
    ],
@@ -487,14 +527,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alexis\\AppData\\Local\\Temp\\ipykernel_18228\\3739714355.py:11: FutureWarning: \n",
+      "C:\\Users\\Alexis\\AppData\\Local\\Temp\\ipykernel_9824\\1943066596.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  categories_individ_df[\"rating\"].describe()[6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# See the distribution of ratings in Philadelphia\n",
+    "categories_individ_df[\"rating\"].describe()\n",
+    "# TO DO : Should decide on the threshold for the ratings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Alexis\\AppData\\Local\\Temp\\ipykernel_9824\\3739714355.py:11: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -515,7 +585,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alexis\\AppData\\Local\\Temp\\ipykernel_18228\\3739714355.py:25: FutureWarning: \n",
+      "C:\\Users\\Alexis\\AppData\\Local\\Temp\\ipykernel_9824\\3739714355.py:25: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -569,7 +639,6 @@
    "metadata": {},
    "source": [
     "#### PLOT PER CATEGORY\n",
-    "\n",
     "TO COMPLETE (SEE ATTRIBUTES)"
    ]
   },
@@ -636,7 +705,7 @@
     "# Mean rating per category\n",
     "mean_ratings[\"group_category\"] = mean_ratings[\"categories_list\"].map(CategoryLabel)\n",
     "mean_ratings = mean_ratings.groupby(['group_category', 'categories_list'])['rating'].mean().reset_index()\n",
-    "mean_ratings = mean_ratings[mean_ratings['rating'] >= 3.6]\n",
+    "mean_ratings = mean_ratings[mean_ratings['rating'] >= rating_75P] \n",
     "mean_ratings"
    ]
   },
@@ -795,8 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# See TO DO....\n",
-    "### Analyzing Atributes\n"
+    "### Analyzing Atributes"
    ]
   },
   {
@@ -1222,6 +1290,49 @@
     "    plt.ylabel('Rating')\n",
     "\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the analysis above, we sought to explore insights in the datasets targeted at Philadelphia using NLP methods and statistical calculations. Our approach is based on a quantitative and qualitative view of reviews linked to \"attributes\" and \"categories\" by business. This gives us an appreciative idea of the importance of different ratings. As the problem seeks to discover what is liked by consumers, we refined our analysis to consider only reviews classified as positive. We continued by groupping the categories and attributes by factors (groups) to get a more precise view of similar variables in our analysis. \n",
+    "\n",
+    "Next, we ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.2\n",
+    "## An analysis of the evolution of food trends in the area over time, in terms of consumer preferences. Do the preferences evolve over time, or do they seem stable?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.3\n",
+    "## Imagine you have to present your findings to the business owner and his investors. What advice would you give to the new business, based on your findings?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TO DO: Find the most frequent and worse ratings ( negative feeling) per attribute and category. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can interpret negativity as frustration and unfulfilled needs. As a result, there's a chance to be successful in the restaurant business by satisfying unfulfilled needs, and consequently to do good business. To maximize your chances of success, you need to target what most consumers are saying. That's why we need to identify what is particularly misjudged in Philadelphia.\n",
+    "\n",
+    "Our analysis has shown that the Philadelphia restaurant market: [Findings]...\n",
+    "\n",
+    "We recommend to the business owner and his investors: [Practically / Business insight]"
    ]
   }
  ],
